implement riveiws find ,findall , update ,create and delete route
